--- a/src/renders/main/container/index.scss
+++ b/src/renders/main/container/index.scss
@@ -29,11 +29,10 @@ $w: 42px;
       border-left: 1px solid #ccc;
     }
     .editor-panel {
-      // display: flex;
-      // flex-direction: column;
-      // justify-content: space-between;
-      // align-items: stretch;
-      overflow: auto;
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+      justify-content: space-between;
     }
   }
 }
