--- a/src/renders/main/components/reviewer/index.scss
+++ b/src/renders/main/components/reviewer/index.scss
@@ -1,5 +1,14 @@
 .reviewer-comp-panel {
   .title-panel {
+    padding: 20px 0;
     border-bottom: 1px solid #ccc;
+
+    .title {
+      font-size: 28px;
+      line-height: 1.5em;
+    }
+  }
+  .content-panel {
+    padding: 20px 0;
   }
 }
