--- a/src/renders/main/container/index.scss
+++ b/src/renders/main/container/index.scss
@@ -31,10 +31,11 @@ $w: 42px;
       overflow-y: auto;
     }
     .editor-panel {
-      display: flex;
-      flex-direction: column;
-      align-items: stretch;
-      justify-content: space-between;
+      // display: flex;
+      // flex-direction: column;
+      // align-items: stretch;
+      // justify-content: space-between;
+      overflow-y: auto;
     }
   }
 }
